--- a/app/src/main/res/layout/fragment_todo_display.xml
+++ b/app/src/main/res/layout/fragment_todo_display.xml
@@ -3,7 +3,7 @@
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/fragmentJobAdListRvSwipeRefreshLayout"
+        android:id="@+id/todoDisplaySwipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -12,12 +12,12 @@
             android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/fragmentJobAdListRv"
+                android:id="@+id/todoDisplayRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fragmentJobAdListFilterFab"
+                android:id="@+id/todoDisplayFab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
@@ -26,7 +26,7 @@
                 android:focusable="true"
                 android:scaleType="center"
                 app:fabSize="normal"
-                app:layout_anchor="@id/fragmentJobAdListRv"
+                app:layout_anchor="@id/todoDisplayRecyclerView"
                 app:layout_anchorGravity="bottom|right|end"
                 app:srcCompat="@android:drawable/btn_star"/>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
