--- a/app/src/main/res/layout/item_todo_display.xml
+++ b/app/src/main/res/layout/item_todo_display.xml
@@ -5,7 +5,7 @@
               android:layout_height="wrap_content">
 
     <TextView
-            android:id="@+id/textViewJobAdList"
+            android:id="@+id/todoDisplayTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
